assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@300;400;700&display=swap');

/* Global Styling Elements */
html, body {
  margin:0;
  padding:0;
}

html {
    height: 100%;
}

body {
    background-color: #3268BD;
    font-family: 'Comic Neue', cursive;
    min-height: 100%;
    position: relative;
    padding-bottom: 140px;
}

.container-max-width {
    max-width: 700px;
}

.bangers-font {
    font-family: 'Bangers', cursive;
}

.avengers-banner {
    height: 20vh;
    background: url("../images/avengers-logo-removebg.png") center center/contain no-repeat;
}

.banner-container {
    margin: 10px auto 10px auto;
    max-width: 430px;
    border: solid 2px #000;
    background-image: -0-radial-gradient(circle, yellow, orange);
    background-image: radial-gradient(circle, yellow, orange);
    -webkit-box-shadow: 0 6px 6px -6px #000;
            box-shadow: 0 6px 6px -6px #000;
    border-radius: .25rem;
}

.btn {
    -webkit-box-shadow: 0 6px 6px -6px #000;
            box-shadow: 0 6px 6px -6px #000;
}

/* Navbar Styling */
.navbar {
    box-shadow: 0 6px 6px -6px #000;
}
.navbar-brand {
    padding-top: 0;
    padding-bottom: 0;
    width: 40px;
    height: 40px;
}

.navbar-colour {
    background-color: #e9ecef;
}


/* Footer Styling */
.footer-section {
    height: 120px;
    background-color: #e9ecef;
    position: absolute;
    left: 0 ; right: 0; bottom: 0;
}

.footer-info {
    margin-top: 30px;
    font-weight: 700;
}

.site-designer {
    margin-bottom: 0;
    font-size: large;
}

.social-links a {
    color: rgba(0,0,0,.9);
    height: 20px;
    -webkit-transition: color 0.35s ease-in-out;
    -o-transition: color 0.35s ease-in-out;
    transition: color 0.35s ease-in-out;
}

.social-links a:hover {
    color: #3268BD;
}

/* Game Controls Styling */
.btn-warning {
    background-image: -o-radial-gradient(circle, yellow, orange);
    background-image: radial-gradient(circle, yellow, orange);
    border: solid 2px #000;
    font-weight: 700;
}

.row {
    padding-right: 0;
}

.text-box-spacing {
    padding: 0 0 0 4px;
}

.text-box {
    background-image: -o-radial-gradient(circle, yellow, orange);
    background-image: radial-gradient(circle, yellow, orange);
    border: solid 2px #000;
    font-weight: 700;
    padding: 6px 12px;
    border-radius: .25rem;
    -webkit-box-shadow: 0 6px 6px -6px #000;
            box-shadow: 0 6px 6px -6px #000;
}


.p-left-0 {
    padding: .5rem .5rem .5rem 0;
}

.p-right-0 {
    padding: .5rem 0 .5rem .5rem;
}

/* Game Styling */

#game-panel {
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    display: -webkit-flex;
    display: -ms-flex;
    display: flex;
    margin: auto;
    padding: 5px;
    border: solid 2px #000;
    background-image: -o-radial-gradient(circle, yellow, orange);
    background-image: radial-gradient(circle, yellow, orange);
    -webkit-box-shadow: 0 6px 6px -6px #000;
            box-shadow: 0 6px 6px -6px #000;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-perspective: 1000px;
            perspective: 1000px;
    min-height: 320px;
}

.memory-card {
    width: 100px;
    height: 140px;
    margin: 5px;
    position: relative;
    -webkit-box-shadow: 0 6px 6px -6px #000;
            box-shadow: 0 6px 6px -6px #000;
    border-radius: .25rem;
    background-image: -o-radial-gradient(circle, lightblue, darkblue);
    background-image: radial-gradient(circle, lightblue, darkblue);
    border: solid 2px #000;
    -webkit-transform: scale(1);
        -ms-transform: scale(1);
            transform: scale(1);
    -webkit-transform-style: preserve-3d;
            transform-style: preserve-3d;
    transition: -webkit-transform .8s;
    -o-transition: transform .8s;
    transition: transform .8s;
    transition: transform .8s, -webkit-transform .8s;
}

.memory-card:active {
    -webkit-transform: scale(0.97);
            transform: scale(0.97);
    -webkit-transition: .2s;
    -o-transition: .2s;
    transition: .2s;
}

.memory-card.flip {
    -webkit-transform: rotateY(180deg);
            transform: rotateY(180deg);
    -webkit-transition: .8s;     
    -o-transition: .8s;
    transition: .8s;
}

.front-face,
.back-face {
    padding: 10px;
    position: absolute;
    height: 100%;
    width: 100%;
    pointer-events: none;
    -webkit-transform-style: preserve-3d;
            transform-style: preserve-3d;
}

.back-face {
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
}

.front-face {
    -webkit-transform: rotateY(180deg);
            transform: rotateY(180deg);
    -webkit-backface-visibility: visible;
            backface-visibility: visible;
}

.easyavenger1,
.easy2avenger1,
.mediumavenger1,
.medium2avenger1,
.hardavenger1,
.hard2avenger1 {
    background: url('../images/antman.svg') no-repeat center;
}

.easyavenger2,
.easy2avenger2,
.mediumavenger2,
.medium2avenger2,
.hardavenger2,
.hard2avenger2 {
    background: url('../images/captainamerica.svg') no-repeat center;
}

.easyavenger3,
.easy2avenger3,
.mediumavenger3,
.medium2avenger3,
.hardavenger3,
.hard2avenger3 {
    background: url('../images/daredevil.svg') no-repeat center;
}

.easyavenger4,
.easy2avenger4,
.mediumavenger4,
.medium2avenger4,
.hardavenger4,
.hard2avenger4 {
    background: url('../images/groot.svg') no-repeat center;
}

.easyavenger5,
.easy2avenger5,
.mediumavenger5,
.medium2avenger5,
.hardavenger5,
.hard2avenger5 {
    background: url('../images/hawkeye.svg') no-repeat center;
}

.easyavenger6,
.easy2avenger6,
.mediumavenger6,
.medium2avenger6,
.hardavenger6,
.hard2avenger6 {
    background: url('../images/ironman.svg') no-repeat center;
}

.easyavenger7,
.easy2avenger7,
.mediumavenger7,
.medium2avenger7,
.hardavenger7,
.hard2avenger7 {
    background: url('../images/spiderman.svg') no-repeat center;
}
/* ... */

